5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1800_2570.log
== TEST (2019-06-11 11:16:42) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor: ")))
m = sum(v)/size(v)
p = 0
for i in range(size(v)):
	p = p + abs(x[i] - m)
print(round(p**(1/n),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:16:59) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor: ")))
m = sum(v)/size(v)
p = 0
for i in range(size(v)):
	p = p + abs(x[i] - m)
print(round(p**(1/n),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:17:16) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor: ")))
m = sum(v)/size(v)
p = 0
for i in range(size(v)):
	p = p + abs(v[i] - m)
print(round(p**(1/n),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:17:50) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor: ")))
m = sum(v)/size(v)
n = size(v)

p = 0
for i in range(size(v)):
	p = p + abs(v[i] - m)
print(round(p**(1/n),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:18:14) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor: ")))
m = sum(v)/size(v)
n = size(v)

p = 0
for i in range(size(v)):
	p = p * abs(v[i] - m)
print(round(p**(1/n),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:19:28) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor: ")))
m = sum(v)/size(v)
n = size(v)

p = 0
for i in range(size(v)):
	p = p + abs(v[i] - m)
print(round(p**(1/n),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:20:03) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor: ")))
m = sum(v)/size(v)
n = size(v)

p = 1
for i in range(size(v)):
	p = p + abs((v[i] - m)
print(round(p**(1/n),3))
-- ERROR:
File "XXXX", line 9
    print(round(p**(1/n),3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:20:09) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor: ")))
m = sum(v)/size(v)
n = size(v)

p = 1
for i in range(size(v)):
	p = p + abs(v[i] - m)
print(round(p**(1/n),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:20:23) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor: ")))
m = sum(v)/size(v)
n = size(v)

p = 1
for i in range(size(v)):
	p = p +* abs(v[i] - m)
print(round(p**(1/n),3))
-- ERROR:
File "XXXX", line 8
    p = p +* abs(v[i] - m)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:20:31) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor: ")))
m = sum(v)/size(v)
n = size(v)

p = 1
for i in range(size(v)):
	p = p * abs(v[i] - m)
print(round(p**(1/n),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:20:39) 
-- CODE:
from numpy import*
v = array(eval(input("Vetor: ")))
m = sum(v)/size(v)
n = size(v)

p = 1
for i in range(size(v)):
	p = p * abs(v[i] - m)
print(round(p**(1/n),3))
-- EXECUTION TIME:
1.13154
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.839
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.757
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.212
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
